relative start url

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#3498db",
   "background_color": "#f4f6f7"
